[gd_scene load_steps=21 format=3 uid="uid://b4fvqw5fkcies"]

[ext_resource type="Script" path="res://Scenes/lab.gd" id="1_1arhn"]
[ext_resource type="Texture2D" uid="uid://b24g67ktrwffl" path="res://ArtAssets/Lab_GroundFloor.png" id="1_61pid"]
[ext_resource type="Texture2D" uid="uid://dtp4k7k8x71rh" path="res://ArtAssets/Lab_Mezzanine.png" id="2_iw1m8"]
[ext_resource type="Texture2D" uid="uid://bfpqioedooiyr" path="res://ArtAssets/Lab_Ceiling Chains.png" id="3_38xy6"]
[ext_resource type="PackedScene" uid="uid://rsuxbe2c44kc" path="res://Scenes/door.tscn" id="4_c2783"]
[ext_resource type="PackedScene" uid="uid://bynsrjsdfwnk3" path="res://Scenes/player.tscn" id="5_u7uxv"]
[ext_resource type="PackedScene" uid="uid://brlgx8da08bii" path="res://Scenes/repairable_machine.tscn" id="6_3h3qd"]
[ext_resource type="PackedScene" uid="uid://bl8bxtvmqglo2" path="res://Scenes/pointmarker.tscn" id="7_jb0jr"]
[ext_resource type="PackedScene" uid="uid://cm7sbd4nd3nbe" path="res://Scenes/cabinet.tscn" id="9_ji3dj"]
[ext_resource type="PackedScene" uid="uid://4udjmo7bjf8j" path="res://Scenes/ghost.tscn" id="9_nle2v"]
[ext_resource type="PackedScene" uid="uid://1rs7ilg6rm" path="res://Scenes/PauseMenu.tscn" id="10_p7m80"]
[ext_resource type="PackedScene" uid="uid://dl7768u6x3alm" path="res://Scenes/game_over_screen.tscn" id="11_j0o72"]
[ext_resource type="PackedScene" uid="uid://0xybnneums2j" path="res://Scenes/key.tscn" id="12_xpse0"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_8k3t5"]
vertices = PackedVector2Array(303, -20, 303, -46, 306.25, -47, 306.969, 167, 273, -20, 298, 94, 246, 94, 108, 52.5, 70, 40, 70, -18.5, 241, -47, 273, -46, 298, 146, -109, 78, -109, 19.5, -86, 52.5, -86, 111, 26, -18.5, 26, 40, 5, 22, 5, -30, 209, 167, 246, 146, 209, 133, 108, 111, 157, 133, 64, 52.5, 241, -29, 189, -29, -307, -113.008, 291, -113.961, 291, -110, -286, -110, -307, 123, -286, -14, -153, 78, -266, 123, -262, -14, -153, 19.5, -262, -47, -56, -47, -56, -34, -26, -34, -26, -47, 60, -47, 60, -35, 90, -35, 90, -47, 189, -47, 64, 111, -42, 111, -42, 52.5, -47, 22, -47, -30, 157, 167, -266, 167)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 0, 5, 6, 7, 8, 9), PackedInt32Array(10, 2, 1, 11), PackedInt32Array(0, 3, 12, 5), PackedInt32Array(13, 14, 15, 16), PackedInt32Array(17, 18, 19, 20), PackedInt32Array(12, 3, 21, 22), PackedInt32Array(22, 21, 23, 6), PackedInt32Array(24, 7, 6, 23, 25), PackedInt32Array(8, 7, 26, 18), PackedInt32Array(27, 10, 11, 4), PackedInt32Array(27, 4, 9, 28), PackedInt32Array(29, 30, 31, 32), PackedInt32Array(33, 29, 32, 34), PackedInt32Array(35, 36, 33, 34, 37, 38), PackedInt32Array(38, 37, 39, 40, 41, 14), PackedInt32Array(42, 43, 44, 45, 20), PackedInt32Array(46, 47, 48, 28), PackedInt32Array(45, 46, 28, 9, 17, 20), PackedInt32Array(18, 26, 49, 50, 51), PackedInt32Array(52, 19, 18, 51, 15), PackedInt32Array(53, 52, 15, 14, 41), PackedInt32Array(24, 25, 54, 55, 49), PackedInt32Array(50, 49, 55), PackedInt32Array(16, 50, 55), PackedInt32Array(35, 13, 16, 55, 36), PackedInt32Array(53, 41, 42, 20)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-317, -123, 316, -124, 317, 177, -317, 177)])
parsed_collision_mask = 13
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kwso7"]
distance = -177.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_y7bmc"]
normal = Vector2(0, 1)
distance = -125.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yuwlo"]
normal = Vector2(1, 0)
distance = -317.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_05f3t"]
normal = Vector2(-1, 0)
distance = -317.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdlp0"]
size = Vector2(593, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lqagn"]
size = Vector2(4, 33)

[node name="Lab" type="Node"]
script = ExtResource("1_1arhn")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Floor" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_61pid")

[node name="Door" parent="." instance=ExtResource("4_c2783")]
position = Vector2(-296, -154)
destination = "res://Scenes/hallway.tscn"

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(4, -1)
navigation_polygon = SubResource("NavigationPolygon_8k3t5")

[node name="Walls" type="StaticBody2D" parent="NavigationRegion2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavigationRegion2D/Walls"]
shape = SubResource("WorldBoundaryShape2D_kwso7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="NavigationRegion2D/Walls"]
shape = SubResource("WorldBoundaryShape2D_y7bmc")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="NavigationRegion2D/Walls"]
shape = SubResource("WorldBoundaryShape2D_yuwlo")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="NavigationRegion2D/Walls"]
shape = SubResource("WorldBoundaryShape2D_05f3t")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="NavigationRegion2D/Walls"]
position = Vector2(20.5, -78.5)
shape = SubResource("RectangleShape2D_fdlp0")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="NavigationRegion2D/Walls"]
position = Vector2(-274, -40.5)
shape = SubResource("RectangleShape2D_lqagn")

[node name="stairkey" parent="NavigationRegion2D" groups=["Gettables"] instance=ExtResource("12_xpse0")]
position = Vector2(306, -112)
frame = 0
contents = {
"stairkey": 1
}
pickuptext = "You found the stair key!"
pickupindex = 1

[node name="bronzekey" parent="NavigationRegion2D" groups=["Gettables"] instance=ExtResource("12_xpse0")]
position = Vector2(288, -33)
spriteindex = 3
contents = {
"key1": 1
}
pickuptext = "You got a bronze key!"
pickupindex = 2

[node name="silverkey" parent="NavigationRegion2D" groups=["Gettables"] instance=ExtResource("12_xpse0")]
position = Vector2(75, -48)
frame = 2
spriteindex = 2
contents = {
"key2": 1
}
pickuptext = "You got a silver key!"
pickupindex = 3

[node name="goldkey" parent="NavigationRegion2D" groups=["Gettables"] instance=ExtResource("12_xpse0")]
position = Vector2(-41, -47)
frame = 1
spriteindex = 1
contents = {
"key3": 1
}
pickuptext = "You got a gold key!"
pickupindex = 4

[node name="Cabinet0" parent="NavigationRegion2D" groups=["Searchables"] instance=ExtResource("9_ji3dj")]
position = Vector2(48, 12)
locked = false
keyid = ""
contents = {
"wire": 1
}
search_text = "You found a part!"
full_sprite = 3
empty_sprite = 7

[node name="Cabinet1" parent="NavigationRegion2D" groups=["Searchables"] instance=ExtResource("9_ji3dj")]
position = Vector2(-64, 83)
searchableindex = 1
contents = {
"medium_screwdriver": 1
}
search_text = "You found a screwdriver"
full_sprite = 2

[node name="Cabinet2" parent="NavigationRegion2D" groups=["Searchables"] instance=ExtResource("9_ji3dj")]
position = Vector2(86, 83)
keyid = "key2"
searchableindex = 2
contents = {
"small_screwdriver": 1
}
search_text = "You found a screwdriver"
empty_sprite = 4

[node name="Cabinet3" parent="NavigationRegion2D" groups=["Searchables"] instance=ExtResource("9_ji3dj")]
position = Vector2(-131, 50)
keyid = "key3"
searchableindex = 3
contents = {
"large_screwdriver": 1
}
search_text = "You found a screwdriver"
full_sprite = 1
empty_sprite = 5

[node name="RepairableMachine" parent="NavigationRegion2D" instance=ExtResource("6_3h3qd")]
position = Vector2(-21, -4)

[node name="RepairableMachine2" parent="NavigationRegion2D" instance=ExtResource("6_3h3qd")]
position = Vector2(272, 120)

[node name="RepairableMachine3" parent="NavigationRegion2D" instance=ExtResource("6_3h3qd")]
position = Vector2(215, -55)

[node name="RepairableMachine4" parent="NavigationRegion2D" instance=ExtResource("6_3h3qd")]
position = Vector2(183, 159)

[node name="RepairableMachine5" parent="NavigationRegion2D" instance=ExtResource("6_3h3qd")]
position = Vector2(-292, 149)

[node name="Sprite2D" parent="NavigationRegion2D" instance=ExtResource("7_jb0jr")]
visible = false
position = Vector2(290, 160)

[node name="Sprite2D2" parent="NavigationRegion2D" instance=ExtResource("7_jb0jr")]
visible = false
position = Vector2(287, -4)

[node name="Sprite2D3" parent="NavigationRegion2D" instance=ExtResource("7_jb0jr")]
visible = false
position = Vector2(-237, -30)

[node name="Sprite2D4" parent="NavigationRegion2D" instance=ExtResource("7_jb0jr")]
visible = false
position = Vector2(-236, 151)

[node name="Player" parent="." instance=ExtResource("5_u7uxv")]
position = Vector2(-296, -135)

[node name="Mezzanine" type="Sprite2D" parent="."]
texture = ExtResource("2_iw1m8")

[node name="Chains" type="Sprite2D" parent="."]
texture = ExtResource("3_38xy6")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0, 0, 0, 1)

[node name="Ghost" parent="." instance=ExtResource("9_nle2v")]
position = Vector2(-171, 134)

[node name="PauseMenu" parent="." instance=ExtResource("10_p7m80")]

[node name="GameOverScreen" parent="." instance=ExtResource("11_j0o72")]

[connection signal="room_exited" from="Door" to="." method="on_save_requested"]
[connection signal="gettable_got" from="NavigationRegion2D/stairkey" to="." method="_on_gettable_got"]
[connection signal="gettable_got" from="NavigationRegion2D/bronzekey" to="." method="_on_gettable_got"]
[connection signal="gettable_got" from="NavigationRegion2D/silverkey" to="." method="_on_gettable_got"]
[connection signal="gettable_got" from="NavigationRegion2D/goldkey" to="." method="_on_gettable_got"]
[connection signal="searchable_searched" from="NavigationRegion2D/Cabinet0" to="." method="on_searchable_searched"]
[connection signal="searchable_searched" from="NavigationRegion2D/Cabinet1" to="." method="on_searchable_searched"]
[connection signal="searchable_searched" from="NavigationRegion2D/Cabinet2" to="." method="on_searchable_searched"]
[connection signal="searchable_searched" from="NavigationRegion2D/Cabinet3" to="." method="on_searchable_searched"]
[connection signal="pause_requested" from="Player" to="PauseMenu" method="_on_player_pause_requested"]
[connection signal="caughtyou" from="Ghost" to="Player" method="oncaught"]
[connection signal="caughtyou" from="Ghost" to="GameOverScreen" method="on_player_caught"]
[connection signal="reset_to_entry" from="GameOverScreen" to="." method="on_reset_requested"]
